# generated/server/go-server/novellia/go/model_extended721_file.go
@@ -1,0 +1,24 @@
+/*
+ * novellia
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.9.2
+ * Contact: contact@rektangularstudios.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package novellia
+
+// Extended721File - See: https://github.com/cardano-foundation/CIPs/pull/85#discussion_r629120254
+type Extended721File struct {
+
+	// identifier for file
+	Name string `json:"name,omitempty"`
+
+	// MIME type of file
+	MediaType string `json:"mediaType,omitempty"`
+
+	// either a single file URL or an array of file URLs
+	Src OneOfstringarray `json:"src,omitempty"`
+}
